chore: normalize line endings